--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# base16-pywal
+# base16-pywalfox
 
 This repo includes the template to build colorschemes for pywalfox from the base16
 color palettes.
